force-app/main/default/objects/Territory_Assignment_Setting__mdt/Territory_Assignment_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Territory Assignment Setting</label>
    <pluralLabel>Territory Assignment Settings</pluralLabel>
</CustomObject>