force-app/main/default/objects/Territory_Assignment_Setting__mdt/fields/AMETEK_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>AMETEK_Territory_ID__c</fullName>
    <label>AMETEK Territory ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>