force-app/main/default/objects/Territory_Assignment_Setting__mdt/fields/Default_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Territory_ID__c</fullName>
    <label>Default Territory ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>