force-app/main/default/objects/Territory_Assignment_Setting__mdt/fields/SFD_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>SFD_Territory_ID__c</fullName>
    <label>SFD Territory ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>